# ShopPilot

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  ai_service.py  database.py  main.py  pyproject.toml  requirements.txt
extension/: .env.example  .gitignore  README.md  api.ts  background.ts  fix-paths.js  package-lock.json  package.json  popup.tsx  store.ts  style.css  tailwind.config.js  tsconfig.json  types.ts
extension/components/: MatchResult.tsx  OnboardingForm.tsx  ProductAnalysis.tsx
extension/contents/: extract-product.ts
extension/sidepanel/: index.tsx
