[project]
name = "backend"
version = "0.1.0"
description = "SpecScout backend - AI-powered product matching API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
